# rust-stack-generator

./: .gitignore  README.md  main.sh  pyvenv.cfg  requirements.txt  setup.sh
src/: __main__.py
src/constants/: rust_types.py
src/generators/: schema_template_generator.py
src/generators/file_generator/: file_template_generator.py  file_template_value_injector.py
src/generators/schema/: entity_schema.py  global_schema.py
src/generators/template_value_factory/: db_create_input_converter_template_value_factory.py  db_entity_template_value_factory.py  db_search_input_converter_template_value_factory.py  db_update_input_converter_template_value_factory.py  empty_template_value_factory.py  entity_modules_template_value_factory.py  entity_name_template_value_factory.py  global_template_value_factory.py  gql_context_template_value_factory.py  gql_db_template_value_factory.py  gql_endpoints_mod_template_value_factory.py  gql_endpoints_root_template_value_factory.py  migration_template_value_factory.py  model_converter_template_value_factory.py  model_template_value_factory.py  template_key_val_pair.py  template_value_factory.py
src/schema/: .gitignore  claw-auth.yml  dockit.yml  example-schema.yml  smart-site.yml
src/templates/: Cargo.toml
src/templates/api/app-base/src/: lib.rs  main_fn.rs
src/templates/api/gql/: Cargo.toml
src/templates/api/gql/src/: routes.rs
src/templates/api/gql/src/context/: app_data.rs  mod.rs
src/templates/api/gql/src/schema/: endpoint.rs  root.rs
src/templates/apps/app/: Cargo.toml
src/templates/apps/app-base/: Cargo.toml
src/templates/apps/app-base/src/: app_data.rs  macros.rs
src/templates/apps/app/src/: main.rs
src/templates/bruno/: count.bru  create.bru  getById.bru  getMany.bru  getOne.bru  update.bru
src/templates/common_models/: Cargo.toml  create.rs  entity.rs
src/templates/common_models/search/: mod.rs  search_iterable_input.rs  search_ranged_input.rs
src/templates/common_models/src/: delete.rs  lib.rs  update.rs
src/templates/common_models/src/entities/: entity.rs  mod.rs
src/templates/common_models/src/search/: count_output.rs  mod.rs  pagination.rs  search_exact_input.rs  search_many_input.rs  types.rs
src/templates/db/: create_input_converter.rs  db_impl.rs  db_mod.rs  db_tests.rs  db_trait.rs  entity.rs  interface_mod.rs  model_converter.rs  models.rs  search_input_converter.rs  update_input_converter.rs  utils_mod.rs
src/templates/db/impl/: Cargo.toml  database.rs  entity.rs  tests.rs
src/templates/db/impl/global_utils/: mod.rs
src/templates/db/impl/global_utils/client_tests/: mock_connection.rs  mod.rs
src/templates/db/impl/src/: lib.rs  mod.rs
src/templates/db/impl/src/client/: database.rs  entity.rs  tests.rs
src/templates/db/impl/src/client/utils/: create_input_converter.rs  mod.rs  model_converter.rs  search_input_converter.rs  update_input_converter.rs
src/templates/db/impl/src/global_utils/: client_impl.rs  database_connector.rs  mod.rs  search_field_converter.rs
src/templates/db/impl/src/tests/: mod.rs
src/templates/db/impl/src/utils/: client_impl.rs  input_converters.rs  mod.rs  model_converter.rs  search_input_converter.rs  update_field_converter.rs  update_input_converter.rs
src/templates/db/impl/src/utils/test_utils/: test_macros.rs
src/templates/db/impl/tests/: test_macros.rs
src/templates/db/impl/utils/: create_input_converter.rs  search_input_converter.rs
src/templates/db/interface/: Cargo.toml  mod.rs  models.rs
src/templates/db/interface/src/: database.rs  mod.rs  models.rs  trait.rs
src/templates/error/: Cargo.toml  actix_web_integration.rs  async_graphql_integration.rs  error.rs  lib.rs  sea_orm_integration.rs
src/templates/error/src/: error_data.rs
src/templates/gql/context/: context_wrapper.rs  db_factory.rs
src/templates/gql/schema/: endpoint.rs  mod.rs
src/templates/gql/src/: lib.rs
src/templates/gql/src/utils/: jwt_token_extractor.rs
src/templates/gql/utils/: endpoint_impl.rs  mod.rs
src/templates/graphql/: endpoints.rs  endpoints_root.rs  gql_context_wrapper.rs
src/templates/migration/: init_migration.rs
src/templates/service/: create_input_converter.rs  interface_mod.rs  model_converter.rs  models.rs  search_input_converter.rs  search_many_input_converter.rs  service_impl.rs  service_mod.rs  service_tests.rs  service_trait.rs  update_input_converter.rs  utils_mod.rs
src/templates/service/impl/: Cargo.toml  service.rs  tests.rs
src/templates/service/impl/global_utils/: mod.rs  service_impl.rs
src/templates/service/impl/src/: lib.rs  mod.rs  services_mod.rs
src/templates/service/impl/src/service/: service.rs  tests.rs
src/templates/service/impl/src/service/utils/: create_input_converter.rs  mod.rs  model_converter.rs  search_input_converter.rs  search_many_input_converter.rs  update_input_converter.rs
src/templates/service/impl/src/utils/: create_input_converter.rs  input_converters.rs  mod.rs  model_converter.rs  search_input_converter.rs  search_many_input_converter.rs  service_impl.rs  service_tests.rs
src/templates/service/impl/utils/: mod.rs  update_input_converter.rs
src/templates/service/interface/: Cargo.toml
src/templates/service/interface/src/: lib.rs  mod.rs  models.rs  service.rs  trait.rs
src/utils/: __init__.py
