[package]
name = "{project_kebab}-common-models"
version = "0.1.0"
edition = "2021"


[features]
default = []
async_graphql = ["dep:async-graphql", "maybe/async_graphql"]
sea_orm = ["dep:sea-orm"]
serde = ["dep:serde"]
skip_fields = []

[dependencies]
async-graphql = { workspace = true, optional = true }
chrono = { workspace = true }
maybe = { workspace = true }
serde = { workspace = true, optional = true }
uuid = { workspace = true }
sea-orm = { workspace = true, optional = true }
