[package]
name = "{project_kebab}-db-postgres"
version = "0.1.0"
edition = "2021"

[features]
mock = ["sea-orm/mock"]

[dependencies]
{project_kebab}-db-interface = { path = "../{project_kebab}-db-interface" }
{project_kebab}-db-models = { path = "../{project_kebab}-db-models" }
{project_kebab}-error = { path = "../../models/{project_kebab}-error", features = ["sea_orm"] }
{project_kebab}-common-models = { path = "../../models/{project_kebab}-common-models", features = ["sea_orm"]}
maybe = { workspace = true }
sea-orm = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
