[package]
name = "{project_kebab}-db-interface"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { workspace = true, optional = true }
async-trait = { workspace = true }
chrono = { workspace = true }
maybe = { workspace = true }
{project_kebab}-common-models = { path = "../../models/{project_kebab}-common-models" }
{project_kebab}-error = { path = "../../models/{project_kebab}-error" }
mockall = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
